--- a/Half-Life 2/autoexecUltraHQ.cfg
+++ b/Half-Life 2/autoexecUltraHQ.cfg
@@ -1,7 +1,7 @@
 echo "crippling depression ultra high quality half life"
 echo "sv_cheats 1 required to change protected cvars"
 echo "mat_max_worldmesh_vertices more than 9 nines causes (too many vertex format changes in frame, whole world not rendered) with missing textures in point insertion (d1_trainstation_02)"
-echo "cl_detaildist and cl_detailfade return to default values on map load"
+echo "cl_detaildist and cl_detailfade return to default values on map load, fixes disappearing grass when value is 999999999"
 echo "r_maxmodeldecal large values crash game"
 echo "r_queued_decals 1 causes crashing"
 echo "never use fps_max 0, increases latency"
