--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -14,6 +14,7 @@ echo "r_queued_post_processing causes flashing colors and other graphical bugs w
 echo "cl_phys_props_max at a value too large will cause disappearing props when shot"
 echo "(con_logfile foo.log) to save console output as file in Counter-Strike Source/cstrike directory"
 echo "invisible gun world models occur even with default config, happens because of missing custom server weapon models + replacement error model"
+echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
 
 blink_duration "0.2"
 cl_allowdownload "0"
