--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -9,6 +9,7 @@ echo "use GCFScape to open and view VPK files"
 echo "r_queued_post_processing causes flashing colors and other graphical bugs when joining a game, reconnecting fixes flashing colors but still produces post processing glitches like strobing and dimming of post processing lights and disappearing gun"
 echo "cl_phys_props_max at a value too large will cause disappearing props when shot"
 echo "(con_logfile foo.log) to save console output as file in Half-Life 2/hl2 directory"
+echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
 
 blink_duration "0.2"
 cl_allowdownload "0"
