--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -15,7 +15,7 @@ echo "cl_phys_props_max at a value too large will cause disappearing props when 
 echo "(con_logfile foo.log) to save console output as file in Counter-Strike Source/cstrike directory"
 echo "invisible gun world models occur even with default config, happens because of missing custom server weapon models + replacement error model"
 echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
-
+exho "dsp_slow_cpu 1 is bad for sound positioning, DONT USE"
 
 
 echo "ragdolls and water are enabled for fun config"
