--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -10,6 +10,7 @@ echo "r_queued_post_processing causes flashing colors and other graphical bugs w
 echo "cl_phys_props_max at a value too large will cause disappearing props when shot"
 echo "(con_logfile foo.log) to save console output as file in Half-Life 2/hl2 directory"
 echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
+echo "dsp_slow_cpu 1 is bad for sound positioning, DONT USE"
 
 blink_duration "0.2"
 cl_allowdownload "0"
