--- a/Half-Life 2/autoexecUltraHQ.cfg
+++ b/Half-Life 2/autoexecUltraHQ.cfg
@@ -12,6 +12,7 @@ echo "cl_phys_props_max at a value too large will cause disappearing props when 
 echo "(con_logfile foo.log) to save console output as file in Half-Life 2/hl2 directory"
 echo "r_radiosity changes the lighting of models from original default look (3), a value of 2 gives the most accurate lighting"
 echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
+echo "dsp_slow_cpu 1 is bad for sound positioning, DONT USE"
 
 sv_cheats "1"
 
