--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -16,6 +16,7 @@ echo "(con_logfile foo.log) to save console output as file in Counter-Strike Sou
 echo "invisible gun world models occur even with default config, happens because of missing custom server weapon models + replacement error model"
 echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
 echo "dsp_slow_cpu 1 is bad for sound positioning, DONT USE"
+echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
 
 blink_duration "0.2"
 cl_allowdownload "0"
@@ -55,7 +56,7 @@ cl_threaded_client_leaf_system "1"
 cl_wpn_sway_interp "0"
 con_enable "1"
 decalfrequency "1"
-dsp_enhance_stereo "1"
+dsp_enhance_stereo "0"
 dsp_slow_cpu "0"
 engine_no_focus_sleep "0"
 fast_fogvolume "0"
