--- a/Counter-Strike: Source/autoexecPRO.cfg
+++ b/Counter-Strike: Source/autoexecPRO.cfg
@@ -16,6 +16,7 @@ echo "(con_logfile foo.log) to save console output as file in Counter-Strike Sou
 echo "invisible gun world models occur even with default config, happens because of missing custom server weapon models + replacement error model"
 echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
 echo "dsp_slow_cpu 1 is bad for sound positioning, DONT USE"
+echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
 
 
 
