--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -11,6 +11,7 @@ echo "cl_phys_props_max at a value too large will cause disappearing props when 
 echo "(con_logfile foo.log) to save console output as file in Half-Life 2/hl2 directory"
 echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
 echo "dsp_slow_cpu 1 is bad for sound positioning, DONT USE"
+echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
 
 blink_duration "0.2"
 cl_allowdownload "0"
@@ -49,7 +50,7 @@ cl_threaded_bone_setup "1"
 cl_threaded_client_leaf_system "1"
 cl_updaterate "128"
 con_enable "1"
-dsp_enhance_stereo "1"
+dsp_enhance_stereo "0"
 dsp_slow_cpu "0"
 engine_no_focus_sleep "0"
 flex_rules "1"
