--- a/Half-Life 2/autoexecUltraHQ.cfg
+++ b/Half-Life 2/autoexecUltraHQ.cfg
@@ -13,6 +13,7 @@ echo "(con_logfile foo.log) to save console output as file in Half-Life 2/hl2 di
 echo "r_radiosity changes the lighting of models from original default look (3), a value of 2 gives the most accurate lighting"
 echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
 echo "dsp_slow_cpu 1 is bad for sound positioning, DONT USE"
+echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
 
 sv_cheats "1"
 
@@ -55,7 +56,7 @@ cl_threaded_client_leaf_system "1"
 cl_updaterate "128"
 con_enable "1"
 default_fov "102"
-dsp_enhance_stereo "1"
+dsp_enhance_stereo "0"
 dsp_slow_cpu "0"
 enable_debug_overlays "0"
 engine_no_focus_sleep "0"
