--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -8,6 +8,7 @@ echo "cl_phys_props_max at a value too large will cause disappearing props when 
 echo "(con_logfile foo.log) to save console output as file in Team Fortress 2/tf directory"
 echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
 echo "dsp_slow_cpu 1 is bad for sound positioning, DONT USE"
+echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
 
 blink_duration "0.2"
 cl_allowdownload "0"
@@ -51,7 +52,7 @@ cl_software_cursor "0"
 cl_threaded_client_leaf_system "1"
 cl_updaterate "67"
 con_enable "1"
-dsp_enhance_stereo "1"
+dsp_enhance_stereo "0"
 dsp_slow_cpu "0"
 engine_no_focus_sleep "0"
 flex_rules "1"
