--- a/Team Fortress 2/autoexecPERF.cfg
+++ b/Team Fortress 2/autoexecPERF.cfg
@@ -9,6 +9,7 @@ echo "cl_phys_props_max at a value too large will cause disappearing props when 
 echo "(con_logfile foo.log) to save console output as file in Team Fortress 2/tf directory"
 echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
 echo "dsp_slow_cpu 1 is bad for sound positioning, DONT USE"
+echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
 
 blink_duration "0"
 cl_allowdownload "0"
