--- a/Counter-Strike: Source/autoexecPRO.cfg
+++ b/Counter-Strike: Source/autoexecPRO.cfg
@@ -211,6 +211,7 @@ snd_defer_trace "1"
 snd_disable_mixer_duck "1"
 snd_noextraupdate "1"
 snd_async_spew_blocking "0"
+snd_surround_speakers "0"
 sp_decals "0"
 
 violence_ablood "1"
