--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -199,6 +199,7 @@ snd_defer_trace "0"
 snd_disable_mixer_duck "0"
 snd_noextraupdate "1"
 snd_async_spew_blocking "0"
+snd_surround_speakers "0"
 sp_decals "4096"
 sv_allowdownload "0"
 sv_allowupload "0"
