--- a/Team Fortress 2/autoexecPRO.cfg
+++ b/Team Fortress 2/autoexecPRO.cfg
@@ -204,6 +204,7 @@ snd_pitchquality "0"
 snd_defer_trace "1"
 snd_disable_mixer_duck "1"
 snd_noextraupdate "1"
+snd_surround_speakers "0"
 sp_decals "0"
 sv_allowdownload "0"
 sv_allowupload "0"
