--- a/Counter-Strike: Source/autoexecPRO.cfg
+++ b/Counter-Strike: Source/autoexecPRO.cfg
@@ -17,6 +17,7 @@ echo "invisible gun world models occur even with default config, happens because
 echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
 echo "dsp_slow_cpu 0 is bad for sound positioning, DONT USE"
 echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
+echo "snd_pitchquality 1 for high quality sound, best for sound positioning"
 
 
 
@@ -205,8 +206,8 @@ rope_subdiv "1"
 rope_wind_dist "1"
 sensitivity "4"
 snd_async_fullyasync "1"
-snd_mixahead "0.04"
-snd_pitchquality "0"
+snd_mixahead "0.045"
+snd_pitchquality "1"
 snd_defer_trace "1"
 snd_disable_mixer_duck "1"
 snd_noextraupdate "1"
