--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -12,6 +12,8 @@ echo "(con_logfile foo.log) to save console output as file in Half-Life 2/hl2 di
 echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
 echo "dsp_slow_cpu 0 is bad for sound positioning, DONT USE"
 echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
+echo "snd_pitchquality 1 for high quality sound, best for sound positioning"
+
 
 blink_duration "0.2"
 cl_allowdownload "0"
@@ -193,7 +195,7 @@ rope_subdiv "999999999999999999999999999"
 rope_wind_dist "999999999999999999999999999"
 sensitivity "3.5"
 snd_async_fullyasync "1"
-snd_mixahead "0.04"
+snd_mixahead "0.045"
 snd_pitchquality "1"
 snd_defer_trace "0"
 snd_disable_mixer_duck "0"
