--- a/Half-Life 2/autoexecUltraHQ.cfg
+++ b/Half-Life 2/autoexecUltraHQ.cfg
@@ -14,6 +14,7 @@ echo "r_radiosity changes the lighting of models from original default look (3),
 echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
 echo "dsp_slow_cpu 0 is bad for sound positioning, DONT USE"
 echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
+echo "snd_pitchquality 1 for high quality sound, best for sound positioning"
 
 sv_cheats "1"
 
@@ -202,7 +203,7 @@ rope_subdiv "999999999999999999999999999"
 rope_wind_dist "999999999999999999999999999"
 sensitivity "3.5"
 snd_async_fullyasync "1"
-snd_mixahead "0.04"
+snd_mixahead "0.045"
 snd_pitchquality "1"
 snd_defer_trace "0"
 snd_disable_mixer_duck "0"
