--- a/Team Fortress 2/autoexecPRO.cfg
+++ b/Team Fortress 2/autoexecPRO.cfg
@@ -10,6 +10,7 @@ echo "(con_logfile foo.log) to save console output as file in Team Fortress 2/tf
 echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
 echo "dsp_slow_cpu 0 is bad for sound positioning, DONT USE"
 echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
+echo "snd_pitchquality 1 for high quality sound, best for sound positioning"
 
 blink_duration "0"
 cl_allowdownload "0"
@@ -199,8 +200,8 @@ rope_wind_dist "1"
 sensitivity "4"
 snd_async_fullyasync "1"
 snd_async_spew_blocking "0"
-snd_mixahead "0.04"
-snd_pitchquality "0"
+snd_mixahead "0.045"
+snd_pitchquality "1"
 snd_defer_trace "1"
 snd_disable_mixer_duck "1"
 snd_noextraupdate "1"
