--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -214,6 +214,7 @@ snd_async_spew_blocking "0"
 snd_pitchquality "1'
 snd_surround_speakers "0"
 sp_decals "0"
+windows_speaker_config "0"
 
 violence_ablood "1"
 violence_agibs "1"
