--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -209,6 +209,7 @@ snd_noextraupdate "1"
 snd_async_spew_blocking "0"
 snd_surround_speakers "0"
 sp_decals "4096"
+windows_speaker_config "0"
 
 violence_ablood "1"
 violence_agibs "1"
