--- a/Counter-Strike: Source/autoexecPERF.cfg
+++ b/Counter-Strike: Source/autoexecPERF.cfg
@@ -208,6 +208,7 @@ snd_noextraupdate "1"
 snd_async_spew_blocking "0"
 snd_surround_speakers "0"
 sp_decals "0"
+windows_speaker_config "0"
 
 violence_ablood "1"
 violence_agibs "1"
