--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -216,6 +216,7 @@ sv_minrate "1048576"
 sv_minupdaterate "128"
 sv_unlockedchapters "99"
 tv_enable "0"
+windows_speaker_config "0"
 
 bind mwheelup "+jump"
 bind mwheeldown "+jump"
