--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -219,6 +219,7 @@ sv_minrate "1048576"
 sv_minupdaterate "66"
 tf_particles_disable_weather "0"
 tv_enable "0"
+windows_speaker_config "0"
 
 tf_explanations_backpackpanel "0"
 tf_explanations_charinfo_armory_panel "0"
