--- a/Team Fortress Classic/userconfigHQ.cfg
+++ b/Team Fortress Classic/userconfigHQ.cfg
@@ -8,7 +8,7 @@ echo "if immediate crash after server join, try cl_allowdownload 1"
 echo "joining beta installs old 2020 build, not newer 2023 builds"
 echo "make sure config.cfg, autoexec.cfg, and userconfig.cfg are READ-ONLY to prevent admin slowhacking"
 echo "make sure tempdecal.wad is READ-ONLY and blank 0KB, unless using a custom spray"
-
+echo "DONT USE hud_deathnotice_time 0, hard to know if you get wallbangs or nade kills"
 
 _snd_mixahead "0.045"
 ati_npatch "0"
