--- a/Counter-Strike 1.6/userconfigPERF.cfg
+++ b/Counter-Strike 1.6/userconfigPERF.cfg
@@ -10,6 +10,7 @@ echo "joining beta installs old 2020 build, not newer 2023 builds"
 echo "make sure config.cfg, autoexec.cfg, and userconfig.cfg are READ-ONLY to prevent admin slowhacking"
 echo "make sure tempdecal.wad is READ-ONLY and blank 0KB, unless using a custom spray"
 echo "DONT USE hud_deathnotice_time 0, hard to know if you get wallbangs or nade kills"
+echo "hud_saytext_internal 1 and hud_saytext_time 1 (5 default) to enable chat text"
 
 _cl_autowepswitch "0"
 _setaddons_folder "0"
