--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -18,8 +18,7 @@ echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
 echo "dsp_slow_cpu 0 is bad for sound positioning, DONT USE"
 echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
 echo "snd_pitchquality 1 for high quality sound, best for sound positioning"
-
-
+echo "DONT USE hud_deathnotice_time 0 (6 default), hard to know if you get wallbangs or nade kills"
 
 echo "ragdolls and water are enabled for fun config"
 
@@ -88,6 +87,7 @@ gl_paircache_ways_lg2 "16"
 gl_batch_tex_creates "1"
 gl_batch_tex_destroys "1"
 gl_batch_vis "1"
+hud_deathnotice_time "1"
 hud_fastswitch "1"
 lzma_persistant_buffer "1"
 m_mousespeed "0"
