--- a/Counter-Strike: Source/autoexecPERF.cfg
+++ b/Counter-Strike: Source/autoexecPERF.cfg
@@ -18,6 +18,8 @@ echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
 echo "dsp_slow_cpu 0 is bad for sound positioning, DONT USE"
 echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
 echo "snd_pitchquality 1 for high quality sound, best for sound positioning"
+echo "DONT USE hud_deathnotice_time 0 (6 default), hard to know if you get wallbangs or nade kills"
+
 
 blink_duration "0"
 cl_allowdownload "0"
@@ -82,6 +84,7 @@ gl_paircache_ways_lg2 "16"
 gl_batch_tex_creates "1"
 gl_batch_tex_destroys "1"
 gl_batch_vis "1"
+hud_deathnotice_time "1"
 hud_fastswitch "1"
 lzma_persistant_buffer "1"
 m_mousespeed "0"
