--- a/Half-Life 2/autoexecUltraHQ.cfg
+++ b/Half-Life 2/autoexecUltraHQ.cfg
@@ -15,6 +15,7 @@ echo "r_pixelfog 0 adds a layer of ugly fog, DONT USE"
 echo "dsp_slow_cpu 0 is bad for sound positioning, DONT USE"
 echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
 echo "snd_pitchquality 1 for high quality sound, best for sound positioning"
+echo "DONT USE hud_deathnotice_time 0 (6 default), hard to know if you get wallbangs or nade kills"
 
 sv_cheats "1"
 
@@ -82,6 +83,7 @@ gl_debug_output "0"
 gl_radar7954721_workaround_mixed "0"
 gl_amd_occulusion_workaround "0"
 gl_paircache_rows_lg2 "32"
+hud_deathnotice_time "6"
 hud_fastswitch "1"
 joystick "0"
 lzma_persistant_buffer "1"
