--- a/Counter-Strike: Source/autoexecPRO.cfg
+++ b/Counter-Strike: Source/autoexecPRO.cfg
@@ -90,7 +90,9 @@ gl_batch_tex_creates "1"
 gl_batch_tex_destroys "1"
 gl_batch_vis "1"
 hud_deathnotice_time "1"
+hud_drawhistory_time "1"
 hud_fastswitch "1"
+hud_saytext_time "1"
 lzma_persistant_buffer "1"
 m_mousespeed "0"
 m_rawinput "1"
