--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -79,8 +79,10 @@ gl_radar7954721_workaround_mixed "0"
 gl_amd_occulusion_workaround "0"
 gl_paircache_rows_lg2 "32"
 hud_deathnotice_time "6"
+hud_drawhistory_time "5"
 hud_escort_interp "0"
 hud_fastswitch "1"
+hud_saytext_time "12"
 joystick "0"
 lzma_persistant_buffer "1"
 m_customaccel "0"
