--- a/Team Fortress 2/autoexecPERF.cfg
+++ b/Team Fortress 2/autoexecPERF.cfg
@@ -80,8 +80,10 @@ gl_batch_tex_creates "1"
 gl_batch_tex_destroys "1"
 gl_batch_vis "1"
 hud_deathnotice_time "1"
+hud_drawhistory_time "1"
 hud_escort_interp "0"
 hud_fastswitch "1"
+hud_saytext_time "1"
 joystick "0"
 lzma_persistant_buffer "1"
 m_customaccel "0"
