--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -19,6 +19,8 @@ echo "dsp_slow_cpu 0 is bad for sound positioning, DONT USE"
 echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
 echo "snd_pitchquality 1 for high quality sound, best for sound positioning"
 echo "DONT USE hud_deathnotice_time 0 (6 default), hard to know if you get wallbangs or nade kills"
+echo "DONT USE hud_saytext_time 1, results in blurry chat thats hard to read"
+echo "hud_saytext_time 2 (12 default) to enable chat text"
 
 
 
@@ -90,9 +92,9 @@ gl_batch_tex_creates "1"
 gl_batch_tex_destroys "1"
 gl_batch_vis "1"
 hud_deathnotice_time "1"
-hud_drawhistory_time "1"
+hud_drawhistory_time "0"
 hud_fastswitch "1"
-hud_saytext_time "1"
+hud_saytext_time "0"
 lzma_persistant_buffer "1"
 m_mousespeed "0"
 m_rawinput "1"
