--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -11,6 +11,8 @@ echo "dsp_slow_cpu 0 is bad for sound positioning, DONT USE"
 echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
 echo "snd_pitchquality 1 for high quality sound, best for sound positioning"
 echo "DONT USE hud_deathnotice_time 0 (6 default), hard to know if you get wallbangs or nade kills"
+echo "DONT USE hud_saytext_time 1, results in blurry chat thats hard to read"
+echo "hud_saytext_time 2 (12 default) to enable chat text"
 
 blink_duration "0.2"
 cl_allowdownload "0"
