--- a/Team Fortress 2/autoexecPRO.cfg
+++ b/Team Fortress 2/autoexecPRO.cfg
@@ -12,6 +12,8 @@ echo "dsp_slow_cpu 0 is bad for sound positioning, DONT USE"
 echo "dsp_enhanced_stereo 1 is bad for sound positioning, DONT USE"
 echo "snd_pitchquality 1 for high quality sound, best for sound positioning"
 echo "DONT USE hud_deathnotice_time 0 (6 default), hard to know if you get wallbangs or nade kills"
+echo "DONT USE hud_saytext_time 1, results in blurry chat thats hard to read"
+echo "hud_saytext_time 2 (12 default) to enable chat text"
 
 blink_duration "0"
 cl_allowdownload "0"
@@ -80,10 +82,10 @@ gl_batch_tex_creates "1"
 gl_batch_tex_destroys "1"
 gl_batch_vis "1"
 hud_deathnotice_time "1"
-hud_drawhistory_time "1"
+hud_drawhistory_time "0"
 hud_escort_interp "0"
 hud_fastswitch "1"
-hud_saytext_time "1"
+hud_saytext_time "0"
 joystick "0"
 lzma_persistant_buffer "1"
 m_customaccel "0"
