--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -25,7 +25,7 @@ echo "r_worldlights 1 required for cl_c4dynamiclight 1 to work"
 
 
 
-echo "ragdolls and water are enabled for fun config"
+echo "ragdolls, water, dynamic lights, and c4 dynamic light are enabled for fun config"
 
 
 
@@ -204,7 +204,7 @@ r_waterdrawreflection "1"
 r_waterdrawrefraction "1"
 r_waterforceexpensive "0"
 r_waterforcereflectentities "0"
-r_worldlights "0"
+r_worldlights "4"
 rate "1048576"
 rope_collide "0"
 rope_smooth "0"
