--- a/Counter-Strike: Source/autoexecPRO.cfg
+++ b/Counter-Strike: Source/autoexecPRO.cfg
@@ -21,11 +21,11 @@ echo "snd_pitchquality 1 for high quality sound, best for sound positioning"
 echo "DONT USE hud_deathnotice_time 0 (6 default), hard to know if you get wallbangs or nade kills"
 echo "DONT USE hud_saytext_time 1, results in blurry chat thats hard to read"
 echo "hud_saytext_time 2 (12 default) to enable chat text"
-echo "r_worldlights 1 required for cl_c4dynamiclight 1 to work"
+echo "r_worldlights 1 (4 default) required for cl_c4dynamiclight 1 to work"
 
 
 
-echo "water and shadows enabled for pro config"
+echo "water, shadows, dynamic light, and c4 dynamic light enabled for pro config"
 
 
 
@@ -204,7 +204,7 @@ r_waterdrawreflection "1"
 r_waterdrawrefraction "1"
 r_waterforceexpensive "0"
 r_waterforcereflectentities "0"
-r_worldlights "0"
+r_worldlights "4"
 rate "1048576"
 rope_collide "0"
 rope_smooth "0"
