--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -21,7 +21,7 @@ echo "snd_pitchquality 1 for high quality sound, best for sound positioning"
 echo "DONT USE hud_deathnotice_time 0 (6 default), hard to know if you get wallbangs or nade kills"
 echo "DONT USE hud_saytext_time 1, results in blurry chat thats hard to read"
 echo "hud_saytext_time 2 (12 default) to enable chat text"
-echo "r_worldlights 1 required for cl_c4dynamiclight 1 to work"
+echo "r_worldlights 1 (4 default) required for cl_c4dynamiclight 1 to work"
 
 blink_duration "0.2"
 cl_allowdownload "0"
