--- a/Counter-Strike: Source/autoexecPERF.cfg
+++ b/Counter-Strike: Source/autoexecPERF.cfg
@@ -23,6 +23,12 @@ echo "DONT USE hud_saytext_time 1, results in blurry chat thats hard to read"
 echo "hud_saytext_time 2 (12 default) to enable chat text"
 echo "r_worldlights 1 (4 default) required for cl_c4dynamiclight 1 to work"
 
+
+
+echo "ragdolls, water, shadows, dynamic light, and c4 dynamic light disabled for PERF config"
+
+
+
 blink_duration "0"
 cl_allowdownload "0"
 cl_allowupload "0"
