--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -25,7 +25,7 @@ echo "r_worldlights 1 (4 default) required for cl_c4dynamiclight 1 to work"
 
 
 
-echo "ragdolls, water, dynamic lights, and c4 dynamic light are enabled for fun config"
+echo "ragdolls, water, dynamic lights, and c4 dynamic light are enabled for FUN config"
 
 
 
