--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -23,6 +23,11 @@ echo "DONT USE hud_saytext_time 1, results in blurry chat thats hard to read"
 echo "hud_saytext_time 2 (12 default) to enable chat text"
 echo "r_worldlights 1 (4 default) required for cl_c4dynamiclight 1 to work"
 
+
+
+echo "ragdolls, ragdoll collide, water, shadows, dynamic light, and c4 dynamic light enabled for HQ config"
+
+
 blink_duration "0.2"
 cl_allowdownload "0"
 cl_allowupload "0"
