--- a/Counter-Strike: Source/autoexecPRO.cfg
+++ b/Counter-Strike: Source/autoexecPRO.cfg
@@ -25,7 +25,7 @@ echo "r_worldlights 1 (4 default) required for cl_c4dynamiclight 1 to work"
 
 
 
-echo "water, shadows, dynamic light, and c4 dynamic light enabled for pro config"
+echo "water, shadows, dynamic light, and c4 dynamic light enabled for PRO config"
 
 
 
