--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -205,6 +205,7 @@ r_waterdrawreflection "1"
 r_waterdrawrefraction "1"
 r_waterforceexpensive "1"
 r_waterforcereflectentities "1"
+r_worldlightmin "0.0002"
 r_worldlights "64"
 rate "786432"
 rope_collide "1"
