--- a/Counter-Strike: Source/autoexecPERF.cfg
+++ b/Counter-Strike: Source/autoexecPERF.cfg
@@ -204,6 +204,7 @@ r_waterdrawreflection "0"
 r_waterdrawrefraction "0"
 r_waterforceexpensive "0"
 r_waterforcereflectentities "0"
+r_worldlightmin "0"
 r_worldlights "0"
 rate "1048576"
 rope_collide "0"
