--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -195,6 +195,7 @@ r_waterdrawreflection "1"
 r_waterdrawrefraction "1"
 r_waterforceexpensive "1"
 r_waterforcereflectentities "1"
+r_worldlightmin "0.0002"
 r_worldlights "64"
 rate "1048576"
 rope_collide "1"
