--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -14,6 +14,12 @@ echo "DONT USE hud_deathnotice_time 0 (6 default), hard to know if you get wallb
 echo "DONT USE hud_saytext_time 1, results in blurry chat thats hard to read"
 echo "hud_saytext_time 2 (12 default) to enable chat text"
 
+
+
+echo "ragdolls, ragdoll collide, water, shadows, and dynamic light enabled for HQ config"
+
+
+
 blink_duration "0.2"
 cl_allowdownload "0"
 cl_allowupload "0"
