--- a/Half-Life 2/autoexecUltraHQ.cfg
+++ b/Half-Life 2/autoexecUltraHQ.cfg
@@ -18,6 +18,7 @@ echo "snd_pitchquality 1 for high quality sound, best for sound positioning"
 echo "DONT USE hud_deathnotice_time 0 (6 default), hard to know if you get wallbangs or nade kills"
 echo "DONT USE hud_saytext_time 1, results in blurry chat thats hard to read"
 echo "hud_saytext_time 2 (12 default) to enable chat text"
+echo "r_hunkalloclightmaps 0 to fix Engine Hunk Overflow error"
 
 sv_cheats "1"
 
