--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -13,6 +13,7 @@ echo "snd_pitchquality 1 for high quality sound, best for sound positioning"
 echo "DONT USE hud_deathnotice_time 0 (6 default), hard to know if you get wallbangs or nade kills"
 echo "DONT USE hud_saytext_time 1, results in blurry chat thats hard to read"
 echo "hud_saytext_time 2 (12 default) to enable chat text"
+echo "r_hunkalloclightmaps 0 to fix Engine Hunk Overflow error, occurs often in TF2"
 
 
 
@@ -162,7 +163,7 @@ r_eyemove "1"
 r_fastzreject "0"
 r_ForceWaterLeaf "1"
 r_glint_procedural "0"
-r_hunkalloclightmaps "1"
+r_hunkalloclightmaps "0"
 r_flashlightdepthtexture "1"
 r_flashlightrender "1"
 r_flashlightmodels "1"
