--- a/Team Fortress 2/autoexecPRO.cfg
+++ b/Team Fortress 2/autoexecPRO.cfg
@@ -14,6 +14,7 @@ echo "snd_pitchquality 1 for high quality sound, best for sound positioning"
 echo "DONT USE hud_deathnotice_time 0 (6 default), hard to know if you get wallbangs or nade kills"
 echo "DONT USE hud_saytext_time 1, results in blurry chat thats hard to read"
 echo "hud_saytext_time 2 (12 default) to enable chat text"
+echo "r_hunkalloclightmaps 0 to fix Engine Hunk Overflow error, occurs often in TF2"
 
 
 
@@ -163,7 +164,7 @@ r_eyemove "0"
 r_fastzreject "0"
 r_ForceWaterLeaf "1"
 r_glint_procedural "0"
-r_hunkalloclightmaps "1"
+r_hunkalloclightmaps "0"
 r_flashlightdepthtexture "0"
 r_flashlightrender "0"
 r_flashlightmodels "0"
