--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -2,7 +2,8 @@ echo "crippling depression fun"
 echo "cl_interp 0.015152 for 66tic servers"
 echo "r_queued_decals 1 causes crashes"
 echo "cl_allowdownload 0 causes black screen on join for some servers"
-echo "r_waterdraw cvars cause black water and water glitches when disabled" 
+echo "r_waterdraw cvars cause black water and water glitches when disabled"
+echo "r_maxmodeldecal large values crash game"
 echo "r_maxmodeldecal 0 will crash game after joining a server"
 echo "cs1.6 servers show up in css server list"
 echo "dont use violence_* 0 for gibs or blood, breaks ragdolls and disappearing corpses"
