--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -19,7 +19,7 @@ echo "r_hunkalloclightmaps 0 to fix Engine Hunk Overflow error, occurs often in 
 
 
 
-echo "ragdolls, ragdoll collide, water, shadows, and dynamic light enabled for HQ config"
+echo "ragdolls, ragdoll collide, new impact effects, burning gibs, water, shadows, and dynamic light enabled for HQ config"
 
 
 
@@ -47,6 +47,7 @@ cl_hud_playerclass_use_playermodel "1"
 cl_interp "0.015152"
 cl_interp_ratio "1"
 cl_localnetworkbackdoor "0"
+cl_new_impact_effects "1"
 cl_phys_props_enable "1"
 cl_phys_props_max "999999999"
 cl_phys_props_respawndist "999999999999999999999999999"
