--- a/Team Fortress 2/autoexecPERF.cfg
+++ b/Team Fortress 2/autoexecPERF.cfg
@@ -20,7 +20,7 @@ echo "r_hunkalloclightmaps 0 to fix Engine Hunk Overflow error, occurs often in 
 
 
 
-echo "ragdolls, water, shadows, and dynamic light disabled for PERF config"
+echo "ragdolls, new impact effects, burning gibs, water, shadows, and dynamic light disabled for PERF config"
 
 
 
@@ -48,6 +48,7 @@ cl_hud_playerclass_use_playermodel "0"
 cl_interp "0.015152"
 cl_interp_ratio "1"
 cl_localnetworkbackdoor "0"
+cl_new_impact_effects "0"
 cl_phys_props_enable "0"
 cl_phys_props_max "0"
 cl_phys_props_respawndist "1"
