--- a/Team Fortress 2/autoexecPRO.cfg
+++ b/Team Fortress 2/autoexecPRO.cfg
@@ -20,7 +20,7 @@ echo "r_hunkalloclightmaps 0 to fix Engine Hunk Overflow error, occurs often in 
 
 
 
-echo "new impact effects, burning gibs, water, shadows, and dynamic light enabled for PRO config"
+echo "water, shadows, and dynamic light enabled for PRO config"
 
 
 
