--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -24,6 +24,7 @@ echo "DONT USE hud_saytext_time 1, results in blurry chat thats hard to read"
 echo "hud_saytext_time 2 (12 default) to enable chat text"
 echo "r_worldlights 1 (4 default) required for cl_c4dynamiclight 1 to work"
 echo "r_hunkalloclightmaps 0 to fix Engine Hunk Overflow error, occurs often in TF2"
+echo "cl_new_impact_effects 1 only works in TF2"
 
 
 
