--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -16,6 +16,7 @@ echo "DONT USE hud_deathnotice_time 0 (6 default), hard to know if you get wallb
 echo "DONT USE hud_saytext_time 1, results in blurry chat thats hard to read"
 echo "hud_saytext_time 2 (12 default) to enable chat text"
 echo "r_hunkalloclightmaps 0 to fix Engine Hunk Overflow error, occurs often in TF2"
+echo "cl_new_impact_effects 1 only works in TF2"
 
 
 
