--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -9,6 +9,7 @@ cl_hud_radar_scale "1.3"
 cl_playerspraydisable "1" 
 cl_radar_always_centered "0"
 cl_radar_scale "0.3"
+cl_teamcounter_playercount_instead_of_avatars "1"
 clientport "65007"
 con_enable "1"
 engine_low_latency_sleep_after_client_tick "0"
