--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -6,10 +6,11 @@ cl_autohelp "0"
 cl_hide_avatar_images "0"
 cl_hud_color "1"
 cl_hud_radar_scale "1.3"
-cl_radar_square_with_scoreboard "0"
-cl_playerspraydisable "1" 
+cl_obs_interp_enable "0"
+cl_playerspraydisable "1"
 cl_radar_always_centered "0"
 cl_radar_scale "0.3"
+cl_radar_square_with_scoreboard "0"
 cl_teamcounter_playercount_instead_of_avatars "1"
 clientport "65007"
 con_enable "1"
