--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -14,6 +14,7 @@ cl_radar_scale "0.3"
 cl_radar_square_with_scoreboard "0"
 cl_sniper_auto_rezoom "1"
 cl_teamcounter_playercount_instead_of_avatars "1"
+cl_use_opens_buy_menu "0"
 clientport "65007"
 con_enable "1"
 engine_low_latency_sleep_after_client_tick "0"
