--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -12,6 +12,7 @@ cl_playerspraydisable "1"
 cl_radar_always_centered "0"
 cl_radar_scale "0.3"
 cl_radar_square_with_scoreboard "0"
+cl_showloadout "1"
 cl_sniper_auto_rezoom "1"
 cl_teamcounter_playercount_instead_of_avatars "1"
 cl_use_opens_buy_menu "0"
