--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -3,6 +3,7 @@ echo "never use fps_max 0, increases latency"
 
 cl_allow_animated_avatars "1"
 cl_autohelp "0"
+cl_debounce_zoom "0"
 cl_hide_avatar_images "0"
 cl_hud_color "1"
 cl_hud_radar_scale "1.3"
