--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -28,6 +28,9 @@ r_show_build_info "0"
 sensitivity "4"
 snd_mixahead "0.001"
 rate "1048576"
+ui_mainmenu_bkgnd_movie_1016BB11 "cs_office"
+ui_vanitysetting_team "ct"
+ui_vanitysetting_loadoutslot_ct "rifle1"
 
 bind w "+forward"
 bind a "+left"
