--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -19,18 +19,38 @@ cl_teamcounter_playercount_instead_of_avatars "1"
 cl_use_opens_buy_menu "0"
 clientport "65007"
 con_enable "1"
-engine_low_latency_sleep_after_client_tick "0"
+engine_low_latency_sleep_after_client_tick "1"
 fps_max "999"
 gameinstructor_enable "0"
 hud_scaling "1"
 joystick "0"
 r_show_build_info "0"
 sensitivity "4"
+snd_deathcamera_volume "0"
+snd_ducktovolume "0.55"
+snd_gamevoicevolume "1"
+snd_gamevolume "1"
+snd_mapobjective_volume "0"
+snd_menumusic_volume "0"
+snd_musicvolume "1"
+snd_mvp_volume "0"
+snd_roundaction_volume "0"
+snd_roundend_volume "0"
+snd_roundstart_volume "0"
+snd_steamaudio_reverb_level_db "-3"
+snd_steamaudio_enable_perspective_correction "0"
+snd_spatialize_lerp "1"
+snd_tensecondwarning_volume "0.04"
+snd_toolvolume "1"
+snd_voipvolume "1"
+snd_headphone_eq "0"
+snd_voipvolume "0.5"
 snd_mixahead "0.001"
 rate "1048576"
 ui_mainmenu_bkgnd_movie_1016BB11 "cs_office"
 ui_vanitysetting_team "ct"
 ui_vanitysetting_loadoutslot_ct "rifle1"
+volume "0.01"
 
 bind w "+forward"
 bind a "+left"
