--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -7,6 +7,7 @@ cl_debounce_zoom "0"
 cl_hide_avatar_images "0"
 cl_hud_color "1"
 cl_hud_radar_scale "1.3"
+cl_hud_telemetry_frametime_show "0"
 cl_obs_interp_enable "0"
 cl_player_ping_mute "1"
 cl_playerspraydisable "1"
