--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -10,6 +10,7 @@ cl_hud_radar_scale "1.3"
 cl_hud_telemetry_frametime_show "0"
 cl_hud_telemetry_net_misdelivery_show "0"
 cl_hud_telemetry_ping_show "0"
+cl_hud_telemetry_serverrecvmargin_graph_show "0"
 cl_obs_interp_enable "0"
 cl_player_ping_mute "1"
 cl_playerspraydisable "1"
