--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -28,6 +28,7 @@ fps_max "999"
 gameinstructor_enable "0"
 hud_scaling "1"
 joystick "0"
+r_player_visibility_mode "0"
 r_show_build_info "0"
 sensitivity "4"
 snd_deathcamera_volume "0"
