--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -28,6 +28,8 @@ fps_max "999"
 gameinstructor_enable "0"
 hud_scaling "1"
 joystick "0"
+r_drawtracers "1"
+r_drawtracers_firstperson "0"
 r_player_visibility_mode "0"
 r_show_build_info "0"
 sensitivity "4"
