--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -55,6 +55,7 @@ fps_max "999"
 gameinstructor_enable "0"
 hud_scaling "1"
 joystick "0"
+r_csgo_postprocess_enable "0"
 r_csgo_water_effects "0"
 r_csgo_water_refraction "0"
 r_drawtracers "1"
