--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -1,8 +1,9 @@
-echo "crippling depression performance"
+echo "crippling depression"
 echo "never use fps_max 0, increases latency"
 
 cl_allow_animated_avatars "0"
 cl_autohelp "0"
+cl_clock_recvmargin_enable "0"
 cl_debounce_zoom "0"
 cl_hide_avatar_images "1"
 cl_hud_color "1"
