--- a/Day of Defeat: Source/autoexecHQ.cfg
+++ b/Day of Defeat: Source/autoexecHQ.cfg
@@ -20,7 +20,7 @@ echo "cl_new_impact_effects 1 only works in TF2"
 
 
 
-echo "ragdolls, ragdoll collide, new impact effects, burning gibs, water, shadows, and dynamic light enabled for HQ config"
+echo "ragdolls, ragdoll collide, burning gibs, water, shadows, and dynamic light enabled for HQ config"
 
 
 
@@ -49,7 +49,7 @@ cl_hud_playerclass_use_playermodel "1"
 cl_interp "0.015152"
 cl_interp_ratio "1"
 cl_localnetworkbackdoor "0"
-cl_new_impact_effects "1"
+cl_new_impact_effects "0"
 cl_phys_props_enable "1"
 cl_phys_props_max "999999999"
 cl_phys_props_respawndist "999999999999999999999999999"
