--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -1,4 +1,4 @@
-echo "crippling depression half life"
+echo "crippling depression quality half life"
 echo "mat_max_worldmesh_vertices more than 9 nines causes (too many vertex format changes in frame, whole world not rendered) with missing textures in point insertion (d1_trainstation_02)"
 echo "cl_detaildist and cl_detailfade return to default values on map load, fixes disappearing grass when value is 999999999"
 echo "r_maxmodeldecal large values crash game"
