--- a/Left 4 Dead 2/autoexecPERF.cfg
+++ b/Left 4 Dead 2/autoexecPERF.cfg
@@ -1,4 +1,4 @@
-echo "crippling depression"
+echo "crippling depression performance"
 echo "l4d2 will drop to 10tic during hordes sequence, use cl_interp 0.1 always preferably"
 echo "cl_interp 0.1 for 10tic servers"
 echo "cl_interp 0.033 for 30tic servers"
