--- a/Team Fortress 2/autoexecPRO.cfg
+++ b/Team Fortress 2/autoexecPRO.cfg
@@ -1,4 +1,4 @@
-echo "crippling depression performance"
+echo "crippling depression pro"
 echo "r_waterdraw cvars prevent seeing in water if 0"
 echo "never use fps_max 0, increases latency, bugs some servers to force fps_max 59, causes extreme lag spikes on certain servers"
 echo "make sure config.cfg and autoexec.cfg are READ-ONLY to prevent admin slowhacking"
