--- a/Day of Defeat/userconfigHQ.cfg
+++ b/Day of Defeat/userconfigHQ.cfg
@@ -21,6 +21,7 @@ bgmvolume "0"
 brightness "1"
 cl_allowdownload "0"
 cl_allowupload "0"
+cl_bulletejects "1"
 cl_cmdbackup "2"
 cl_cmdrate "106"
 cl_corpsestay "0"
@@ -29,7 +30,7 @@ cl_crosshair_size "large"
 cl_crosshair_translucent "0"
 cl_dlmax "128"
 cl_download_ingame "0"
-cl_dynamiccrosshair "0"
+cl_dynamic_xhair "0"
 cl_filterstuffcmd "1"
 cl_fixmodelinterpolationartifacts "0"
 cl_himodels "1"
@@ -43,6 +44,8 @@ cl_solid_players "1"
 cl_updaterate "101"
 cl_vsmoothing "0"
 cl_weather "0"
+cl_weatherdis "999999999"
+cl_xhair_style "1"
 d_mipcap "0"
 d_spriteskip "0"
 d_mipscale "0"
