--- a/Day of Defeat/userconfigHQ.cfg
+++ b/Day of Defeat/userconfigHQ.cfg
@@ -31,12 +31,14 @@ cl_crosshair_translucent "0"
 cl_dlmax "128"
 cl_download_ingame "0"
 cl_dynamic_xhair "0"
+cl_dynamiclights "1"
 cl_filterstuffcmd "1"
 cl_fixmodelinterpolationartifacts "0"
 cl_himodels "1"
 cl_minmodels "0"
 cl_mousegrab "1"
 cl_nosmooth "1"
+cl_particlefx "2"
 cl_radartype "1"
 cl_shadows "1"
 cl_smoothtime "0"
