--- a/Day of Defeat/userconfigHQ.cfg
+++ b/Day of Defeat/userconfigHQ.cfg
@@ -12,6 +12,7 @@ echo "make sure tempdecal.wad is READ-ONLY and blank 0KB, unless using a custom 
 echo "DONT USE hud_deathnotice_time 0 (5 default), hard to know if you get wallbangs or nade kills"
 echo "hud_saytext_internal 1 and hud_saytext_time 1 (5 default) to enable chat text"
 
+_ah "0"
 _cl_autowepswitch "0"
 _setaddons_folder "0"
 _sethdmodels "0"
@@ -121,6 +122,7 @@ net_graphpos "2"
 r_decals "4096"
 r_detailtextures "1"
 r_detailtexturessupported "1"
+r_drawviewmodel "1"
 r_dynamic "1"
 r_glowshellfreq "2.2"
 r_lightmap "0"
