--- a/Day of Defeat/userconfigPERF.cfg
+++ b/Day of Defeat/userconfigPERF.cfg
@@ -12,6 +12,7 @@ echo "make sure tempdecal.wad is READ-ONLY and blank 0KB, unless using a custom 
 echo "DONT USE hud_deathnotice_time 0 (5 default), hard to know if you get wallbangs or nade kills"
 echo "hud_saytext_internal 1 and hud_saytext_time 1 (5 default) to enable chat text"
 
+_ah "0"
 _cl_autowepswitch "0"
 _setaddons_folder "0"
 _sethdmodels "0"
@@ -21,6 +22,7 @@ bgmvolume "0"
 brightness "2"
 cl_allowdownload "0"
 cl_allowupload "0"
+cl_bulletejects "0"
 cl_cmdbackup "2"
 cl_cmdrate "106"
 cl_corpsestay "0"
@@ -29,13 +31,15 @@ cl_crosshair_size "large"
 cl_crosshair_translucent "0"
 cl_dlmax "128"
 cl_download_ingame "0"
-cl_dynamiccrosshair "0"
+cl_dynamic_xhair "0"
+cl_dynamiclights "0"
 cl_filterstuffcmd "1"
 cl_fixmodelinterpolationartifacts "0"
 cl_himodels "0"
 cl_minmodels "1"
 cl_mousegrab "1"
 cl_nosmooth "1"
+cl_particlefx "0"
 cl_radartype "1"
 cl_shadows "0"
 cl_smoothtime "0"
@@ -43,6 +47,8 @@ cl_solid_players "1"
 cl_updaterate "101"
 cl_vsmoothing "0"
 cl_weather "0"
+cl_weatherdis "0"
+cl_xhair_style "1"
 d_mipcap "3"
 d_spriteskip "1"
 d_mipscale "3"
@@ -116,6 +122,7 @@ net_graphpos "2"
 r_decals "0"
 r_detailtextures "0"
 r_detailtexturessupported "0"
+r_drawviewmodel "0"
 r_dynamic "1"
 r_glowshellfreq "0"
 r_lightmap "0"
