--- a/Counter-Strike: Source/autoexecPRO.cfg
+++ b/Counter-Strike: Source/autoexecPRO.cfg
@@ -25,6 +25,8 @@ echo "hud_saytext_time 2 (12 default) to enable chat text"
 echo "r_worldlights 1 (4 default) required for cl_c4dynamiclight 1 to work"
 echo "r_hunkalloclightmaps 0 to fix Engine Hunk Overflow error, occurs often in TF2"
 echo "cl_new_impact_effects 1 only works in TF2"
+echo "cl_threaded_bone_client 1 causes buggy broom vortigaunt during Point Insertion in HL2"
+echo "r_novis 1 causes missing props in HL2"
 
 
 
