--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -17,6 +17,8 @@ echo "DONT USE hud_saytext_time 1, results in blurry chat thats hard to read"
 echo "hud_saytext_time 2 (12 default) to enable chat text"
 echo "r_hunkalloclightmaps 0 to fix Engine Hunk Overflow error, occurs often in TF2"
 echo "cl_new_impact_effects 1 only works in TF2"
+echo "cl_threaded_bone_client 1 causes buggy broom vortigaunt during Point Insertion in HL2"
+echo "r_novis 1 causes missing props in HL2"
 
 
 
