--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -55,7 +55,7 @@ cl_show_splashes "1"
 cl_smooth "1"
 cl_smoothtime "0.1"
 cl_software_cursor "0"
-cl_threaded_bone_setup "1"
+cl_threaded_bone_setup "0"
 cl_threaded_client_leaf_system "1"
 cl_updaterate "128"
 con_enable "1"
@@ -173,6 +173,7 @@ r_maxnewsamples "9"
 r_maxsampledist "999999999999999999999999999"
 r_minnewsamples "9"
 r_norefresh "1"
+r_novis "0"
 r_occludermincount "1"
 r_occlusion "1"
 r_PhysPropStaticLighting "1"
