--- a/Half-Life 2/autoexecUltraHQ.cfg
+++ b/Half-Life 2/autoexecUltraHQ.cfg
@@ -235,6 +235,7 @@ sv_maxupdaterate "128"
 sv_mincmdrate "128"
 sv_minrate "1048576"
 sv_minupdaterate "128"
+sv_npc_talker_maxdist "999999999999999999999999999"
 sv_unlockedchapters "99"
 tv_enable "0"
 windows_speaker_config "0"
