--- a/Half-Life 2/autoexecUltraHQ.cfg
+++ b/Half-Life 2/autoexecUltraHQ.cfg
@@ -226,9 +226,14 @@ snd_surround_speakers "0"
 sp_decals "4096"
 sv_allowdownload "0"
 sv_allowupload "0"
+sv_allow_voice_from_file "0"
+sv_allow_votes "0"
+sv_allow_wait_command "0"
 sv_forcepreload "1"
 sv_lan "1"
 sv_logdownloadlist "0"
+sv_logecho "0"
+sv_logfile "0"
 sv_maxcmdrate "128"
 sv_maxrate "0"
 sv_maxupdaterate "128"
@@ -236,6 +241,7 @@ sv_mincmdrate "128"
 sv_minrate "1048576"
 sv_minupdaterate "128"
 sv_npc_talker_maxdist "999999999999999999999999999"
+sv_rcon_log "0"
 sv_unlockedchapters "99"
 tv_enable "0"
 windows_speaker_config "0"
