--- a/Counter-Strike: Source/autoexecPERF.cfg
+++ b/Counter-Strike: Source/autoexecPERF.cfg
@@ -246,6 +246,14 @@ sv_mincmdrate "106"
 sv_minrate "1048576"
 sv_minupdaterate 101"
 
+sv_npc_talker_maxdist "999999999999999999999999999"
+sv_allow_voice_from_file "0"
+sv_allow_votes "0"
+sv_allow_wait_command "0"
+sv_logecho "0"
+sv_logfile "0"
+sv_rcon_log "0"
+
 sys_minidumpspewlines "0"
 
 cl_dynamiccrosshair "0"
