--- a/Team Fortress 2/autoexecPERF.cfg
+++ b/Team Fortress 2/autoexecPERF.cfg
@@ -238,6 +238,13 @@ sv_maxupdaterate "66"
 sv_mincmdrate "66"
 sv_minrate "1048576"
 sv_minupdaterate "66"
+sv_npc_talker_maxdist "999999999999999999999999999"
+sv_allow_voice_from_file "0"
+sv_allow_votes "0"
+sv_allow_wait_command "0"
+sv_logecho "0"
+sv_logfile "0"
+sv_rcon_log "0"
 tf_particles_disable_weather "1"
 tv_enable "0"
 windows_speaker_config "0"
