--- a/Half-Life 2/autoexecUltraHQ.cfg
+++ b/Half-Life 2/autoexecUltraHQ.cfg
@@ -23,6 +23,7 @@ echo "r_hunkalloclightmaps 0 to fix Engine Hunk Overflow error, occurs often in 
 echo "cl_new_impact_effects 1 only works in TF2"
 echo "cl_threaded_bone_client 1 causes buggy broom vortigaunt during Point Insertion in HL2"
 echo "r_novis 1 causes missing props in HL2"
+echo "Half-Life: Source compatible"
 
 echo "sv_cheats 1 enables ULTRA HQ video settings, also disables achievements"
 sv_cheats "1"
