--- a/Day of Defeat: Source/autoexecPERF.cfg
+++ b/Day of Defeat: Source/autoexecPERF.cfg
@@ -243,7 +243,7 @@ sv_maxupdaterate "66"
 sv_mincmdrate "66"
 sv_minrate "1048576"
 sv_minupdaterate "66"
-sv_npc_talker_maxdist "999999999999999999999999999"
+sv_npc_talker_maxdist "1024"
 sv_allow_voice_from_file "0"
 sv_allow_votes "0"
 sv_allow_wait_command "0"
