--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -255,6 +255,11 @@ sv_logecho "0"
 sv_logfile "0"
 sv_rcon_log "0"
 
+sv_vote_allow_spectators "0"
+sv_client_max_interp_ratio "1"
+sv_client_min_interp_ratio "1"
+sv_disablefreezecam "1"
+
 sys_minidumpspewlines "0"
 
 cl_dynamiccrosshair "0"
