--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -256,6 +256,10 @@ sv_allow_wait_command "0"
 sv_logecho "0"
 sv_logfile "0"
 sv_rcon_log "0"
+sv_vote_allow_spectators "0"
+sv_client_max_interp_ratio "1"
+sv_client_min_interp_ratio "1"
+sv_disablefreezecam "1"
 tf_particles_disable_weather "0"
 tv_enable "0"
 windows_speaker_config "0"
