--- a/Half-Life 2/autoexecUltraHQ.cfg
+++ b/Half-Life 2/autoexecUltraHQ.cfg
@@ -24,6 +24,7 @@ echo "cl_new_impact_effects 1 only works in TF2"
 echo "cl_threaded_bone_client 1 causes buggy broom vortigaunt during Point Insertion in HL2"
 echo "r_novis 1 causes missing props in HL2"
 echo "Half-Life: Source compatible"
+echo "cl_interp 0.01 causes stuttering models in HL2, must use cl_interp 0.1"
 
 echo "sv_cheats 1 enables ULTRA HQ video settings, also disables achievements"
 sv_cheats "1"
@@ -43,6 +44,8 @@ cl_disablehtmlmotd "1"
 cl_dynamiccrosshair "0"
 cl_ejectbrass "1"
 cl_forcepreload "1"
+cl_interp "0.1"
+cl_interp_ratio "1"
 cl_localnetworkbackdoor "0"
 cl_phys_props_enable "1"
 cl_phys_props_max "999999999"
