--- a/Return To Castle Wolfenstein/autoexecHQ.cfg
+++ b/Return To Castle Wolfenstein/autoexecHQ.cfg
@@ -71,7 +71,6 @@ seta r_colorbits "32"
 seta r_stencilbits "8"
 seta r_depthbits "24"
 seta r_overbrightbits "1"
-seta r_mode "10"
 seta r_fullscreen "1"
 seta r_subdivisions "1"
 seta r_lodcurveerror "10000"
@@ -86,6 +85,10 @@ seta r_deluxmapping "1"
 seta r_vertexlight "0"
 seta r_shadowfilter "0"
 seta r_nocurves "0"
+
+seta r_mode "-1"
+seta r_customWidth "4096"
+seta r_customHeight "2160"
 
 seta sv_voip "0"
 seta sv_pure "1"
