--- a/Return To Castle Wolfenstein/autoexecHQ.cfg
+++ b/Return To Castle Wolfenstein/autoexecHQ.cfg
@@ -1,4 +1,5 @@
 echo "RTCW HQ CONFIG"
+echo "sv_pure 1 causes VM_Create on UI failed error on map load"
 
 seta cl_running "1"
 seta cl_run "1"
@@ -89,9 +90,10 @@ seta r_nocurves "0"
 seta r_mode "-1"
 seta r_customWidth "4096"
 seta r_customHeight "2160"
+seta r_fullscreen "1"
 
 seta sv_voip "0"
-seta sv_pure "1"
+seta sv_pure "0"
 seta sv_fps "125"
 seta sv_minrate "25000"
 seta sv_maxrate "0"
