--- a/Return To Castle Wolfenstein/autoexecHQ.cfg
+++ b/Return To Castle Wolfenstein/autoexecHQ.cfg
@@ -1,5 +1,6 @@
 echo "RTCW HQ CONFIG"
 echo "sv_pure 1 causes VM_Create on UI failed error on map load"
+echo "sv_fps 21+ causes choppy animations"
 
 seta cl_running "1"
 seta cl_run "1"
@@ -12,7 +13,7 @@ seta cl_mouseaccel "0"
 seta cl_allowdownload "0"
 seta cl_usemumble "0"
 seta cl_voip "0"
-seta cl_renderer "opengl2"
+seta cl_renderer "rend2"
 
 seta cg_shadows "0"
 seta cg_brasstime "999999999999999999999999999"
@@ -94,11 +95,11 @@ seta r_fullscreen "1"
 
 seta sv_voip "0"
 seta sv_pure "0"
-seta sv_fps "125"
+seta sv_fps "20"
 seta sv_minrate "25000"
 seta sv_maxrate "0"
 
-seta s_mixahead "0.05"
+seta s_mixahead "0.045"
 seta s_khz "44"
 seta s_useopenal "1"
 seta s_alprecache "1"
