--- a/Return To Castle Wolfenstein/autoexecHQ.cfg
+++ b/Return To Castle Wolfenstein/autoexecHQ.cfg
@@ -1,6 +1,7 @@
 echo "RTCW HQ CONFIG"
 echo "sv_pure 1 causes VM_Create on UI failed error on map load"
 echo "sv_fps 21+ causes choppy animations"
+echo "r_hdr 0 causes graphical glitches at mission briefing screen"
 
 seta cl_running "1"
 seta cl_run "1"
@@ -58,7 +59,7 @@ seta r_normalmapping "1"
 seta r_ssao "0"
 seta r_depthprepass "1"
 seta r_postprocess "0"
-seta r_hdr "0"
+seta r_hdr "1"
 seta r_tonemap "0"
 seta r_autoexposure "0"
 seta r_ext_compressed_textures "1"
