Update and rename autoexecHQ.cfg to autoexecSPHQ.cfg

--- a/Return To Castle Wolfenstein/autoexecSPHQ.cfg
+++ b/Return To Castle Wolfenstein/autoexecSPHQ.cfg
@@ -1,4 +1,4 @@
-echo "RTCW HQ CONFIG"
+echo "RTCW SINGLE PLAYER HQ CONFIG"
 echo "sv_pure 1 causes VM_Create on UI failed error on map load"
 echo "sv_fps 21+ causes choppy animations"
 echo "r_hdr 0 may cause graphical glitches at mission briefing screen"
@@ -52,17 +52,18 @@ seta r_sunshadows "1"
 seta r_drawsunrays "0"
 seta r_cubemapping "1"
 seta r_parallaxmapping "1"
-seta r_parallaxmapshadows "0"
+seta r_parallaxmapshadows "1"
 seta r_deluxemapping "1"
 seta r_specularmapping "1"
 seta r_normalmapping "1"
-seta r_ssao "0"
+seta r_ssao "1"
 seta r_depthprepass "1"
-seta r_postprocess "0"
-seta r_hdr "0"
-seta r_tonemap "0"
-seta r_autoexposure "0"
-seta r_ext_compressed_textures "1"
+seta r_postprocess "1"
+seta r_hdr "1"
+seta r_tonemap "1"
+seta r_autoexposure "1"
+seta r_ext_compressed_textures "0"
+seta r_ext_framebuffer_multisample "16"
 seta r_ext_texture_filter_anisotropic "1"
 seta r_ext_max_anisotropy "16"
 seta r_ext_texture_env_add "1"
@@ -115,7 +116,7 @@ seta snaps "125"
 seta net_noipx "1"
 seta net_enabled "9"
 
-seta fov "105"
+seta fov "102"
 seta m_filter "0"
 seta sensitivity "4"
 seta name "TyranT"
