--- a/Return To Castle Wolfenstein/autoexecSPHQ.cfg
+++ b/Return To Castle Wolfenstein/autoexecSPHQ.cfg
@@ -62,6 +62,7 @@ seta r_postprocess "1"
 seta r_hdr "1"
 seta r_tonemap "1"
 seta r_autoexposure "1"
+seta r_mergeLightmaps "1"
 seta r_ext_compressed_textures "0"
 seta r_ext_framebuffer_multisample "16"
 seta r_ext_texture_filter_anisotropic "1"
