--- a/Return To Castle Wolfenstein/autoexecSPHQ.cfg
+++ b/Return To Castle Wolfenstein/autoexecSPHQ.cfg
@@ -2,6 +2,7 @@ echo "RTCW SINGLE PLAYER HQ CONFIG"
 echo "sv_pure 1 causes VM_Create on UI failed error on map load"
 echo "sv_fps 21+ causes choppy animations"
 echo "r_hdr 0 may cause graphical glitches at mission briefing screen"
+echo "r_ssao 1 causes buggy shadows and graphical glitches"
 
 seta cl_running "1"
 seta cl_run "1"
