--- a/Return To Castle Wolfenstein/autoexecSPHQ.cfg
+++ b/Return To Castle Wolfenstein/autoexecSPHQ.cfg
@@ -3,6 +3,9 @@ echo "sv_pure 1 causes VM_Create on UI failed error on map load"
 echo "sv_fps 21+ causes choppy animations"
 echo "r_hdr 0 may cause graphical glitches at mission briefing screen"
 echo "r_ssao 1 causes buggy shadows and graphical glitches"
+echo "r_autoexposure 1 dynamically changes brightness ingame, leave DISABLED at 0"
+echo "r_baseSpecular 0.04 renders reflective shininess on textures that DONT use them by default, leave DISABLED at 0"
+echo "r_baseGloss 0.3 renders glossiness on textures that DONT use them by default, leave DISABLED at 0"
 
 seta cl_running "1"
 seta cl_run "1"
@@ -62,8 +65,10 @@ seta r_depthprepass "1"
 seta r_postprocess "1"
 seta r_hdr "1"
 seta r_tonemap "1"
-seta r_autoexposure "1"
+seta r_autoexposure "0"
 seta r_mergeLightmaps "1"
+seta r_baseSpecular "0"
+seta r_baseGloss "0"
 seta r_ext_compressed_textures "0"
 seta r_ext_framebuffer_multisample "16"
 seta r_ext_texture_filter_anisotropic "1"
