Update and rename autoexecHQSP.cfg to autoexecHQ.cfg

--- a/Return To Castle Wolfenstein/autoexecHQ.cfg
+++ b/Return To Castle Wolfenstein/autoexecHQ.cfg
@@ -1,4 +1,4 @@
-echo "RTCW SINGLE PLAYER HQ CONFIG"
+echo "RTCW SINGLE PLAYER AND MULTI PLAYER HQ CONFIG"
 echo "sv_pure 1 causes VM_Create on UI failed error on map load"
 echo "sv_fps 21+ causes choppy animations"
 echo "r_hdr 0 may cause graphical glitches at mission briefing screen"
