--- a/Return To Castle Wolfenstein/autoexecPERF.cfg
+++ b/Return To Castle Wolfenstein/autoexecPERF.cfg
@@ -109,6 +109,7 @@ seta r_picmip2 "10"
 seta r_ati_fsaa_samples "0"
 seta r_ati_truform_tess "0"
 seta r_bloom "0"
+seta r_fastsky "1"
 
 seta r_mode "-1"
 seta r_customWidth "4096"
