--- a/Return To Castle Wolfenstein/autoexecPERF.cfg
+++ b/Return To Castle Wolfenstein/autoexecPERF.cfg
@@ -40,6 +40,7 @@ seta cg_truelightning "0"
 seta cg_footsteps "1"
 seta cg_coronafardist "0"
 seta cg_coronas "0"
+seta cg_wolfparticles "0"
 
 seta com_maxfps "125"
 seta com_maxfpsunfocused "125"
