--- a/Return To Castle Wolfenstein/autoexecHQ.cfg
+++ b/Return To Castle Wolfenstein/autoexecHQ.cfg
@@ -38,9 +38,14 @@ seta cg_crosshaircolor "5"
 seta cg_errordecay "0"
 seta cg_truelightning "0"
 seta cg_footsteps "1"
-seta cg_coronafardist "1536"
+seta cg_coronafardist "999999999999999999999999999"
 seta cg_coronas "1"
 seta cg_wolfparticles "1"
+seta cg_particleLOD "0"
+seta cg_particleDist "999999999999999999999999999"
+seta cg_marktime "999999999999999999999999999"
+seta cg_fixedAspect "0"
+seta cg_fixedAspectFOV "0"
 
 seta com_maxfps "125"
 seta com_maxfpsunfocused "125"
