--- a/Return To Castle Wolfenstein/autoexecPERF.cfg
+++ b/Return To Castle Wolfenstein/autoexecPERF.cfg
@@ -9,6 +9,7 @@ echo "r_baseGloss 0.3 renders glossiness on textures that DONT use them by defau
 echo "logfile 2 to generate console log file"
 echo "com_hunkMegs 1024+ causes crash at launch"
 echo "cg_coronafardist values too high will cause coronas to disappear"
+echo "r_overbrightbits and r_mapoverbrightbits decrease performance and fps"
 
 seta cl_running "1"
 seta cl_run "1"
@@ -56,7 +57,7 @@ seta com_maxfpsminimized "125"
 seta com_hunkMegs "1024"
 
 seta r_intensity "1"
-seta r_mapoverbrightbits "2"
+seta r_mapoverbrightbits "0"
 seta r_texturebits "32"
 seta r_preloadtextures "1"
 seta r_novis "0"
@@ -97,7 +98,7 @@ seta r_texturebits "16"
 seta r_colorbits "32"
 seta r_stencilbits "0"
 seta r_depthbits "24"
-seta r_overbrightbits "1"
+seta r_overbrightbits "0"
 seta r_fullscreen "1"
 seta r_subdivisions "999999999999999999999999999"
 seta r_lodcurveerror "0"
