--- a/Soldier of Fortune/autoexecHQ.cfg
+++ b/Soldier of Fortune/autoexecHQ.cfg
@@ -1,6 +1,9 @@
 echo "Soldier of Fortune HQ autoexec"
 echo "cl_maxfps 120+ will cause physics bugs, keep at 120"
 
+set _sp_cl_info_vid_mode "4096x2160"
+set ai_highpriority "1"
+set ai_maxcorpses "64"
 set allow_download "0"
 set allow_download_maps "0"
 set allow_download_models "0"
@@ -53,6 +56,8 @@ set m_cursor_speed "0"
 set m_filter "0"
 set m_sensitivity_x "2"
 set m_sensitivity_y "2"
+set maxentities "4096"
+set maxspectators "0"
 set noipx "1"
 set r_dynamic "1"
 set r_farclipdist "65535"
