--- a/Soldier of Fortune/autoexecHQ.cfg
+++ b/Soldier of Fortune/autoexecHQ.cfg
@@ -1,7 +1,15 @@
 echo "Soldier of Fortune HQ autoexec"
 echo "cl_maxfps 120+ will cause physics bugs, keep at 120"
+echo "cpu_speed needs to match cpu freqency in MHz"
+echo "cpu_memory needs to match video card memory amount in MBs"
+echo "logfile 2 to create console log"
 
 set _sp_cl_info_vid_mode "4096x2160"
+set _sp_cl_vid_border "1"
+set _sp_cl_vid_fov "1"
+set _sp_cl_vid_gl_texture_mag_filter "GL_LINEAR"
+set _sp_cl_vid_gl_texture_max_anisotropy_ext "16"
+set ai_corpselife "64"
 set ai_highpriority "1"
 set ai_maxcorpses "64"
 set allow_download "0"
@@ -10,12 +18,21 @@ set allow_download_models "0"
 set allow_download_players "0"
 set allow_download_sounds "0"
 set allow_download_stringpackage "0"
+set cl_entities "1"
+set cl_footsteps "1"
+set cl_gun "1"
+set cl_lights "1"
 set cl_max_debris "8192"
 set cl_max_quads "8192"
 set cl_maxfps "120"
 set cl_minfps "1"
+set cl_run "1"
+set cl_subtitles "0"
 set clientport "65009"
-set cpu_memory_using "3"
+set cpu_amd3d "0"
+set cpu_memory "24000"
+set cpu_mmx "1"
+set cpu_speed "5700"
 set fov "102"
 set fx_maxdebrisonscreen "64"
 set ghl_fast_lights "0"
@@ -24,6 +41,7 @@ set ghl_light_method "3"
 set ghl_max_lights "32"
 set ghl_mip "0"
 set ghl_no_cull "1"
+set ghl_obj_fog "1"
 set ghl_player_shadow "1"
 set ghl_precache_texture "1"
 set ghl_precache_verts "1"
@@ -51,6 +69,8 @@ set gl_swapinterval "0"
 set gl_texturemode "GL_LINEAR"
 set in_joystick "0"
 set ip_clientport "65009"
+set logfile "0"
+set low_violence "0"
 set m_cursor_accel "0"
 set m_cursor_speed "0"
 set m_filter "0"
@@ -66,6 +86,10 @@ set r_nocull "1"
 set rate "25000"
 set s_khz "44"
 set s_mixahead "0.045"
+set sc_framerate "120"
+set use_amd3d "1"
+set use_mmx "1"
+set vid_fullscreen "1"
 
 bind space "+jump"
 bind mwheelup "+jump"
