--- a/Soldier of Fortune/autoexecHQ.cfg
+++ b/Soldier of Fortune/autoexecHQ.cfg
@@ -91,7 +91,7 @@ set use_amd3d "1"
 set use_mmx "1"
 set vid_fullscreen "1"
 
-bind space "+jump"
-bind mwheelup "+jump"
-bind mwheeldown "+jump"
-bind rctrl "+movedown"
+bind space "+moveup"
+bind mwheelup "+moveup"
+bind mwheeldown "+moveup"
+bind lctrl "+movedown"
