--- a/Soldier of Fortune/autoexecHQ.cfg
+++ b/Soldier of Fortune/autoexecHQ.cfg
@@ -91,7 +91,11 @@ set use_amd3d "1"
 set use_mmx "1"
 set vid_fullscreen "1"
 
+bind e "+leanright"
+bind f "+use"
+bind q "+leanleft"
 bind space "+moveup"
 bind mwheelup "+moveup"
 bind mwheeldown "+moveup"
 bind lctrl "+movedown"
+bind mouse2 "+altattack"
