--- a/Medal of Honor: Allied Assault/autoexecHQ.cfg
+++ b/Medal of Honor: Allied Assault/autoexecHQ.cfg
@@ -122,6 +122,7 @@ seta ter_maxlod "100"
 seta ter_maxtri "24576"
 seta ter_minMarkRadiu "8"
 
+seta vss_draw "1"
 seta vss_maxcount "64"
 
 seta sv_voip "0"
