--- a/Medal of Honor: Allied Assault/autoexecHQ.cfg
+++ b/Medal of Honor: Allied Assault/autoexecHQ.cfg
@@ -14,6 +14,7 @@ seta cl_allowdownload "0"
 seta cl_usemumble "0"
 seta cl_voip "0"
 seta cl_renderer "opengl2"
+seta cl_playintro "1"
 
 seta cg_shadows "2"
 seta cg_brasstime "999999999999999999999999999"
@@ -107,14 +108,15 @@ seta r_uselod "0"
 seta r_ext_compress_lightmaps "0"
 seta r_lodviewmodelcap "1.0"
 seta r_lodcap "1.0"
-seta g_ddayfodderguys "2"
-seta g_ddayfog "0"
-seta g_ddayshingleguys "2"
 seta r_forceClampToEdge "1"
 
 seta r_mode "-1"
 seta r_customwidth "4096"
 seta r_customheight "2160"
+
+seta g_ddayfodderguys "2"
+seta g_ddayfog "0"
+seta g_ddayshingleguys "2"
 
 seta ter_count "0"
 seta ter_cull "0"
@@ -151,6 +153,7 @@ seta net_enabled "9"
 
 seta fov "105"
 seta m_filter "0"
+seta in_mouse "1"
 seta sensitivity "3.5"
 seta name "TyranT"
 
